DT-2801: Remove the OPEN action for chairs when SO approval required (#2780)